spacing issue

--- a/src/app/create-email/create-email.component.scss
+++ b/src/app/create-email/create-email.component.scss
@@ -15,3 +15,7 @@
 mat-form-field {
   width: 40%;
 }
+
+.file-upload {
+  margin-bottom: 1%
+}
